# github-tech-reader

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  book-cover.pen  book_analyzer.py  bookshelf.apk  diff_preprocessor.py  docker-compose.dev.yml  docker-compose.yml  generate_icons.py  git_utils.py  html_generator.py  llm_parser.py  main.py  manifest.py  pyproject.toml  render.yaml  requirements.txt  run-local.sh  run.sh  svg_renderer.py  tag-contract.json
.github/workflows/: ci.yml
.opencode/commands/: book-advance.md  book-check-style.md  book-clear-cache.md  book-core.md  book-export.md  book-generate-full.md  book-init.md  book-summary.md
.sisyphus/run-continuation/: ses_132153ebefferuzhnX1evIYYk4.json  ses_1352aa01fffeGouAiDKsiXHQoB.json  ses_135450297ffeV2uSMBl32iO4LJ.json  (+3 more)
app/: config.py  job_store.py  main.py  models.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: events.py  main.py
backend/app/agents/: crew.py
backend/app/api/: agents.py  bookmarks.py  books.py  categories.py  imports.py  reading.py  repos.py  schemas.py  youtube.py
backend/app/assets/cover_templates/: manifest.json
backend/app/core/: config.py  database.py  events.py  tag_policy.py
backend/app/models/: bookmark.py  category.py  imported_book.py  repo.py
backend/app/services/: book_generation.py  cover_extractor.py  cover_renderer.py  file_storage.py  github.py  youtube.py
backend/app/utils/: slugify.py
backend/scripts/: cleanup_test_books.py  migrate_to_disk.py  render_cover_samples.py
backend/static/: index.html
backend/static/assets/: index-7NjSHStD.js  index-CXL_DqlH.css
backend/tests/: test_tag_contract.py
doc/: plugin_draft.md  tech-selection.md
docs/: settings.pen
figma_design/: README.md  index.html
frontend/: .dockerignore  .env.development  .env.production  .npmrc  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  playwright.config.ts  playwright.demo.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.toml
html_template/: base.html  book.html  index.html  library.html  structural.html
scripts/: dev-restart.sh
tests/: test_book_analyzer.py  test_git_utils_manifest.py  test_manifest.py
(+87 files in other folders)
